fix: make live view full-height to avoid clipping dropdown (#473)

--- a/src/components/live-space-list/styles.module.scss
+++ b/src/components/live-space-list/styles.module.scss
@@ -59,6 +59,7 @@
 
 .liveSpaceList {
   overflow-y: auto;
+  height: 100%;
   -webkit-overflow-scrolling: touch;
 }
 
